--- a/doc/assets/css/main.css
+++ b/doc/assets/css/main.css
@@ -1357,7 +1357,7 @@
 		@media screen and (max-width: 980px) {
 
 			#header .content p br {
-				display: none;
+				/* display: none; */
 			}
 
 		}
@@ -1432,6 +1432,37 @@
 					display: none;
 				}
 
+		}
+
+
+/* ナビを全部縦にしたい */
+		#header nav ul {
+			-moz-flex-direction: column;
+			-webkit-flex-direction: column;
+			-ms-flex-direction: column;
+			flex-direction: column;
+			min-width: 10rem;
+			max-width: 100%;
+		}
+
+			#header nav ul li {
+				border-left: 0;
+				border-top: solid 1px #ffffff;
+			}
+
+				#header nav ul li:first-child {
+					border-top: 0;
+				}
+
+				#header nav ul li a {
+					height: 3rem;
+					line-height: 3rem;
+					min-width: 0;
+					width: 100%;
+				}
+
+		#header nav.use-middle:after {
+			display: none;
 		}
 
 /* Main */
