--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -174,7 +174,7 @@
 			width: -webkit-max-content;
 			width: -ms-max-content;
 			width: max-content;
-			padding-bottom: 0.5rem;
+			padding-bottom: 0; /* 0.5rem; */
 			margin: 0 0 2rem 0;
 		}
 
@@ -862,7 +862,8 @@
 		dl dt {
 			display: block;
 			font-weight: 600;
-			margin: 0 0 1rem 0;
+			margin: 1rem 0 0 0;
+			/* margin: 0 0 1rem 0; */
 		}
 
 		dl dd {
