--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -862,7 +862,7 @@
 		dl dt {
 			display: block;
 			font-weight: 600;
-			margin: 1rem 0 0 0;
+			margin: 1rem 0 0.1rem 0;
 			/* margin: 0 0 1rem 0; */
 		}
 
