若干日本語を読みやすくした。

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1496,6 +1496,9 @@
 		position: relative;
 		max-width: 100%;
 		z-index: 3;
+		text-align: justify;
+		word-wrap: break-word;
+
 	}
 
 		#main article {
