トップページ、スマホサイズ以外も時間を少しあけた

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1325,6 +1325,10 @@
 			border-left: 0;
 		}
 
+		#header h1 {
+			letter-spacing: 0.5rem;
+		}
+
 		body.is-article-visible #header {
 			-moz-transform: scale(0.95);
 			-webkit-transform: scale(0.95);
@@ -1432,7 +1436,11 @@
 				#header nav.use-middle:after {
 					display: none;
 				}
-
+			
+			#header h1 {
+				letter-spacing: 0.2rem;
+			}
+		
 		}
 
 
