--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1092,7 +1092,7 @@
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/crefes20918poster.jpg");
+			background-image: url("../../images/crefes_cg.jpg");
 			background-position: top center;
 			background-size: cover;
 			background-repeat: no-repeat;
